tree-sitter-beans/grammar.js
    source_file: ($) => seq(optional($.package_declaration), repeat($._top_level)),

    // `package money`. The name is the package's own, not the last segment of
    // the path that reaches it: `shop/transport_v2/` may declare
    // `package transport`.
    _top_level: ($) => choice($.import_declaration, $._declaration),

    _modifier: ($) =>
      choice(
        $.visibility_modifier,
        $.extern_modifier,
        $.feature_modifier,
        $.align_modifier,
        $.unique_modifier,
        $.packed_modifier,
        $.opaque_modifier,
        $.static_modifier,
        $.override_modifier,
      ),

    function_declaration: ($) =>
      prec.right(seq(
        repeat($._modifier),
        'fn',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        // `pub extern "C" fn add(...) -> i32 as "beans_wasm_add"` — the
        // exported C symbol name.
        optional(seq('as', field('export_name', $.string_literal))),
        optional(field('body', $.block)),
      )),

    parameter_list: ($) => seq('(', optional(commaList($.parameter)), ')'),

    _type: ($) =>
      choice(
        $.primitive_type,
        $.generic_type,
        $.type_identifier,
        $.scoped_type_identifier,
        $.function_type,
        $.array_type,
      ),

    // No token precedence here on purpose. `int` is a prefix of `interface`,
    // and raising `int` above the other keywords makes the keyword lexer stop
    // at `int` and never reach `interface`.
    primitive_type: (_) =>
      token(
        choice(...data.types.primitives, data.types.unit, new RegExp(data.types.simdTypeRegex)),
      ),

    block: ($) => seq('{', repeat($._statement), '}'),

    // `if` and `match` are values in Beans, so they reach statement position
    // through `expression_statement` rather than having a second rule each.
    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.assignment_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.defer_statement,
        $.for_statement,
        $.unsafe_block,
        $.brew_statement,
        $.expression_statement,
      ),

    // Only `pub`: a local takes no other modifier, and letting more in here
    // would make `var packed: Bytes` lex `packed` as a keyword.
    // `const NAME: T = <expr>` is module level and has no storage: the
    // checker folds the initializer and every use is that value. `const` is
    // contextual — a declaration word only in `const <NAME>`, an ordinary
    // identifier everywhere else — so the type and the value are both
    // required here, which is what makes the shape unambiguous.
    variable_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        field('kind', choice('let', 'var')),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', choice($._expression, $.brew_expression)))),
      ),

    // `brew f(args)` starts the call on a child fiber of the current scope.
    // Contextual, and deliberately not part of `_expression`: the compiler
    // takes it only as a statement or a `let`/`var` initializer — "a Brew
    // handle is scope-bound, so it cannot ride inside a larger expression".
    // The keyword comes from the external scanner, which emits it only when
    // a call really follows, so `group.brew(...)`, `var brew: int = 5` and
    // `brew = brew + 1` all stay ordinary names, exactly as the compiler
    // reads them.
    expression_statement: ($) => $._expression,

    // ---- expressions ------------------------------------------------------
    _expression: ($) =>
      choice(
        $.identifier,
        $.type_identifier,
        $.self_expression,
        $.super_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.raw_string_literal,
        $.list_literal,
        $.map_literal,
        $.struct_literal,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.range_expression,
        $.cast_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.try_expression,
        $.new_expression,
        $.layout_expression,
        $.lambda_expression,
        $.if_expression,
        $.match_expression,
      ),

    binary_expression: ($) => {
      const levels = [
        [PREC.or, ['||']],
        [PREC.and, ['&&']],
        [PREC.equality, ['==', '!=']],
        [PREC.comparison, ['<', '<=', '>', '>=']],
        [PREC.bitor, ['|']],
        [PREC.bitxor, ['^']],
        [PREC.bitand, ['&']],
        [PREC.shift, ['<<', '>>']],
        [PREC.additive, ['+', '-']],
        [PREC.multiplicative, ['*', '/', '%']],
      ];
      return choice(
        ...levels.flatMap(([precedence, operators]) =>
          operators.map((operator) =>
            prec.left(
              precedence,
              seq(
                field('left', $._expression),
                field('operator', operator),
                field('right', $._expression),
              ),
            ),
          ),
        ),
      );
    },

    // Non-associative, above `||`, exactly like Parser::parse_expr.
    call_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('function', $._expression), field('arguments', $.argument_list)),
      ),

    argument_list: ($) => seq('(', optional(commaList($._expression)), ')'),

    field_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('object', $._expression), '.', field('field', $.identifier)),
      ),

    integer_literal: (_) =>
      token(
        choice(
          /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
          /0[bB][01][01_]*/,
          /[0-9][0-9_]*/,
        ),
      ),

    // `0..10` is a range, so a fraction always needs a digit after the dot.
    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.escape_sequence,
            $._invalid_escape,
            $.interpolation,
            $._string_content,
          ),
        ),
        '"',
      ),

    // A bare `}` is ordinary text — the lexer only ever tracks `{` depth, so
    // `"}"` and `"kind == \"}\""` are strings, not broken interpolations.
    _string_content: (_) => token.immediate(prec(1, /[^"\\{]+/)),

    // `\xNN` is one raw byte and `\u{...}` one codepoint. Both carry their
    // digits, so a half-written `\x1` is not an escape — it is the mistake
    // the compiler's lexer names.
    escape_sequence: (_) =>
      token.immediate(/\\([ntr0\\"{}]|x[0-9a-fA-F]{2}|u\{[0-9a-fA-F]{1,6}\})/),

    // The compiler refuses an unknown escape, but a grammar that cannot
    // tokenize one stops parsing the file — and an editor then loses
    // highlighting for everything after a half-typed `\x1`. The longer
    // escape_sequence token wins wherever it matches, so this only ever
    // catches what the lexer would name.
    _invalid_escape: (_) => token.immediate(/\\./),

    interpolation: ($) =>
      seq(
        token.immediate('{'),
        field('expression', $._expression),
        optional(field('format', $.format_spec)),
        '}',
      ),

    // `{x:8}`, `{x:-8}`, `{pi:.2}`, `{pi:8.2}`
    format_spec: (_) => token(seq(':', /-?[0-9]*(\.[0-9]+)?/)),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});
